// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CreditsItem component should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1cj4ms"
  >
    <div
      class="ant-card-cover"
    >
      <img
        alt="test/title"
        src="https://image.tmdb.org/t/p/w500test/image"
      />
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-card-meta"
      >
        <div
          class="ant-card-meta-detail"
        >
          <div
            class="ant-card-meta-title"
          >
            test/title
          </div>
          <div
            class="ant-card-meta-description"
          >
            test/description
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreditsItem component should match snapshot without profilePath 1`] = `
<DocumentFragment>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable css-dev-only-do-not-override-1cj4ms"
  >
    <div
      class="ant-card-cover"
    >
      <div
        class="ant-card-cover--no-image"
      >
        <img
          alt="test/title"
          src="test-file-stub"
        />
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-card-meta"
      >
        <div
          class="ant-card-meta-detail"
        >
          <div
            class="ant-card-meta-title"
          >
            test/title
          </div>
          <div
            class="ant-card-meta-description"
          >
            test/description
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
